--- a/src/main/resources/fxml/OptionsPane.fxml
+++ b/src/main/resources/fxml/OptionsPane.fxml
@@ -107,8 +107,16 @@
 <Label text="result filename" GridPane.rowIndex="3" />
 <TextField fx:id="resultFilename" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 <Text fx:id="patternExplanation" strokeType="OUTSIDE" strokeWidth="0.0" text="&lt;pattern explanation&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-<Label text="server history" GridPane.rowIndex="5" />
-<Button fx:id="clearServerHistory" mnemonicParsing="false" text="Clear" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+<Label text="server history" GridPane.rowIndex="6" />
+<Button fx:id="clearServerHistory" mnemonicParsing="false" text="Clear" GridPane.columnIndex="1" GridPane.rowIndex="6" /><Label text="check for updates" GridPane.rowIndex="5" /><FlowPane hgap="15.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+<children><RadioButton fx:id="checkUpdatesOnStart" mnemonicParsing="false" text="on every start">
+<toggleGroup>
+<ToggleGroup fx:id="updateCheckGroup" />
+</toggleGroup>
+<FlowPane.margin>
+<Insets />
+</FlowPane.margin></RadioButton><RadioButton fx:id="neverCheckUpdates" mnemonicParsing="false" text="never" toggleGroup="$updateCheckGroup" /><Button fx:id="checkUpdatesNow" mnemonicParsing="false" text="check now" />
+</children></FlowPane>
 </children>
 <columnConstraints>
 <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" minWidth="10.0" prefWidth="130.0" />
@@ -120,6 +128,7 @@
 <rowConstraints>
 <RowConstraints minHeight="10.0" vgrow="NEVER" />
 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
