#5: Add icon that indicates that an update is available on the main menu

--- a/src/main/resources/css/MetroMenu.css
+++ b/src/main/resources/css/MetroMenu.css
@@ -35,6 +35,13 @@
         black;
 }
 
+.no-border {
+    -fx-background-color: 
+        black,
+        black,
+        black;
+}
+
 .bg-black {
 	-fx-background-color: BLACK;
 }
