--- a/src/main/resources/fxml/MetroMenuPane.fxml
+++ b/src/main/resources/fxml/MetroMenuPane.fxml
@@ -6,17 +6,6 @@
 <?import javafx.scene.layout.*?>
 
 <fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-<bottom><FlowPane fx:id="bottomBar" alignment="CENTER" columnHalignment="CENTER" hgap="30.0" prefHeight="50.0" prefWidth="200.0" styleClass="bg-black" BorderPane.alignment="CENTER">
-<children>
-	<Button fx:id="fullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Fullscreen" />
-	<Button fx:id="exitFullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Exit Fullscreen" />
-	<Button fx:id="options" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Options" />
-	<Button fx:id="about" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="About" />
-</children>
-<padding>
-<Insets bottom="10.0" top="10.0" />
-</padding></FlowPane>
-</bottom>
 <top><FlowPane BorderPane.alignment="CENTER">
 <children><Label styleClass="label-top" text="jadice server :: Converter Client" BorderPane.alignment="CENTER">
 <BorderPane.margin>
@@ -43,4 +32,24 @@
 </BorderPane.margin>
 </GridPane>
 </center>
+<bottom><BorderPane fx:id="bottomBar" BorderPane.alignment="CENTER">
+<center><FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="30.0" prefHeight="50.0" prefWidth="200.0" styleClass="bg-black" BorderPane.alignment="CENTER">
+<children>
+	<Button fx:id="fullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Fullscreen" />
+	<Button fx:id="exitFullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Exit Fullscreen" />
+	<Button fx:id="options" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Options" />
+	<Button fx:id="about" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="About" />
+</children>
+<padding>
+<Insets bottom="10.0" top="10.0" />
+</padding></FlowPane>
+</center>
+<right><FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" minWidth="-Infinity" prefWidth="50.0" styleClass="bg-black" BorderPane.alignment="CENTER">
+<children><Button fx:id="update" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small,no-border" text="Update Available" visible="false">
+<FlowPane.margin>
+<Insets right="5.0" />
+</FlowPane.margin></Button>
+</children></FlowPane>
+</right></BorderPane>
+</bottom>
 </fx:root>
