#5: Position update indicator in upper right instead of lower right

--- a/src/main/resources/fxml/MetroMenuPane.fxml
+++ b/src/main/resources/fxml/MetroMenuPane.fxml
@@ -6,16 +6,6 @@
 <?import javafx.scene.layout.*?>
 
 <fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-<top><FlowPane BorderPane.alignment="CENTER">
-<children><Label styleClass="label-top" text="jadice server :: Converter Client" BorderPane.alignment="CENTER">
-<BorderPane.margin>
-<Insets left="10.0" />
-</BorderPane.margin></Label>
-</children>
-<padding>
-<Insets bottom="5.0" left="10.0" top="5.0" />
-</padding></FlowPane>
-</top>
 <center><GridPane alignment="BASELINE_LEFT" hgap="15.0" vgap="15.0">
   <columnConstraints>
     <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" />
@@ -32,8 +22,27 @@
 </BorderPane.margin>
 </GridPane>
 </center>
-<bottom><BorderPane fx:id="bottomBar" BorderPane.alignment="CENTER">
-<center><FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="30.0" prefHeight="50.0" prefWidth="200.0" styleClass="bg-black" BorderPane.alignment="CENTER">
+<top><BorderPane BorderPane.alignment="CENTER">
+<left><FlowPane BorderPane.alignment="CENTER">
+<children><Label styleClass="label-top" text="jadice server :: Converter Client" BorderPane.alignment="CENTER">
+<BorderPane.margin>
+<Insets left="10.0" />
+</BorderPane.margin></Label>
+</children>
+<padding>
+<Insets bottom="5.0" left="10.0" top="5.0" />
+</padding></FlowPane>
+</left>
+<right><Button id="updateButton" fx:id="update" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Update Available" visible="false" BorderPane.alignment="CENTER">
+<FlowPane.margin>
+<Insets right="5.0" />
+</FlowPane.margin>
+<BorderPane.margin>
+<Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+</BorderPane.margin></Button>
+</right></BorderPane>
+</top>
+<bottom><FlowPane fx:id="bottomBar" alignment="CENTER" columnHalignment="CENTER" hgap="30.0" prefHeight="50.0" prefWidth="200.0" styleClass="bg-black" BorderPane.alignment="CENTER">
 <children>
 	<Button fx:id="fullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Fullscreen" />
 	<Button fx:id="exitFullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Exit Fullscreen" />
@@ -43,13 +52,5 @@
 <padding>
 <Insets bottom="10.0" top="10.0" />
 </padding></FlowPane>
-</center>
-<right><FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" minWidth="-Infinity" prefWidth="50.0" styleClass="bg-black" BorderPane.alignment="CENTER">
-<children><Button fx:id="update" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small,no-border" text="Update Available" visible="false">
-<FlowPane.margin>
-<Insets right="5.0" />
-</FlowPane.margin></Button>
-</children></FlowPane>
-</right></BorderPane>
 </bottom>
 </fx:root>
