--- a/src/main/resources/css/MetroMenu.css
+++ b/src/main/resources/css/MetroMenu.css
@@ -35,11 +35,18 @@
         black;
 }
 
-.no-border {
+#updateButton {
+	-fx-base: rgba(0,0,0,0.05);
+	-fx-background-radius: 100%;
+	-fx-background-insets: 0, 2.5;
     -fx-background-color: 
-        black,
-        black,
-        black;
+        transparent,
+        rgba(0,0,0,0.05),
+        rgba(0,0,0,0.05);
+}
+
+#updateButton > .awesome {
+	-fx-text-fill: BLACK  !important;
 }
 
 .bg-black {
