--- a/src/main/resources/fxml/JmxPane.fxml
+++ b/src/main/resources/fxml/JmxPane.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<fx:root prefHeight="493.0" prefWidth="775.0" type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="pane" prefHeight="493.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.levigo.jadice.server.converterclient.gui.jmx.JmxPaneController">
 	<top>
 		<VBox>
 			<children>
@@ -67,4 +67,4 @@
 	<padding>
 		<Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
 	</padding>
-</fx:root>
+</BorderPane>
