Altered MetroMenuPane to use the standard javafx controller pattern

--- a/src/main/resources/fxml/MetroMenuPane.fxml
+++ b/src/main/resources/fxml/MetroMenuPane.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" type="javafx.scene.layout.BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.levigo.jadice.server.converterclient.gui.MetroMenuPaneController">
 <center><GridPane alignment="BASELINE_LEFT" hgap="15.0" vgap="15.0">
   <columnConstraints>
     <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" />
@@ -53,4 +53,4 @@
 <Insets bottom="10.0" top="10.0" />
 </padding></FlowPane>
 </bottom>
-</fx:root>
+</BorderPane>
