--- a/src/main/resources/fxml/JmxPane.fxml
+++ b/src/main/resources/fxml/JmxPane.fxml
@@ -34,9 +34,8 @@
 						<ComboBox fx:id="servers" editable="true"
 							maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="230.0"
 							promptText="JMX URL" />
-						<Button fx:id="connect" defaultButton="true"
-							mnemonicParsing="false" text="Connect" />
-						<Button fx:id="clearView" mnemonicParsing="false" text="Clear View" />
+						<Button fx:id="connect" defaultButton="true" mnemonicParsing="false" text="Connect" onAction="#connect" />
+						<Button fx:id="clearView" mnemonicParsing="false" text="Clear View" onAction="#clearView" />
 					</children>
 					<BorderPane.margin>
 						<Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
