--- a/src/main/resources/fxml/ConversionPane.fxml
+++ b/src/main/resources/fxml/ConversionPane.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane fx:id="pane" prefHeight="493.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.levigo.jadice.server.converterclient.gui.conversion.ConversionPaneController">
+
 <top>
 <VBox>
 <children><FlowPane styleClass="label-top">
@@ -46,6 +47,46 @@
 <TableColumn fx:id="jobErrors" editable="false" maxWidth="35.0" prefWidth="30.0" resizable="false" text="E" />
 <TableColumn fx:id="jobServerInstance" editable="false" maxWidth="1000.0" prefWidth="95.0" text="Server Instance" />
   </columns>
+	<!-- Context Menu is only DEFINED, but not set as property here! -->
+	<fx:define>
+		<ContextMenu fx:id="tableContextMenu">
+			<items>
+				<MenuItem mnemonicParsing="false" text="Open Result" onAction="#openSelectedResults">
+					<graphic>
+						<de.jensd.fx.fontawesome.Icon  awesomeIcon="FOLDER_ALTPEN" size="16px" />
+					</graphic>
+				</MenuItem>
+				<MenuItem mnemonicParsing="false" text="Save Result" onAction="#saveSelectedResults">
+					<graphic>
+						<de.jensd.fx.fontawesome.Icon  awesomeIcon="DOWNLOAD" size="16px" />
+					</graphic>
+				</MenuItem>
+				<MenuItem mnemonicParsing="false" text="Open Original File" onAction="#openSelectedOriginalFiles" />
+				<MenuItem mnemonicParsing="false" text="Show Log" onAction="#openLogMessages" />
+				<SeparatorMenuItem />
+				<MenuItem mnemonicParsing="false" text="Abort" onAction="#abortSelectedJobs">
+					<graphic>
+						<de.jensd.fx.fontawesome.Icon  awesomeIcon="BAN" size="16px" />
+					</graphic>
+				</MenuItem>
+				<MenuItem mnemonicParsing="false" text="Retry" onAction="#retrySelectedJobs">
+					<graphic>
+						<de.jensd.fx.fontawesome.Icon  awesomeIcon="REPEAT" size="16px" />
+					</graphic>
+				</MenuItem>
+				<MenuItem mnemonicParsing="false" text="Inspect Workflow" onAction="#inspectSelectedWorkflow">
+					<graphic>
+						<de.jensd.fx.fontawesome.Icon  awesomeIcon="SEARCH" size="16px" />
+					</graphic>
+				</MenuItem>
+				<MenuItem mnemonicParsing="false" text="Remove (Finished / Aborted only)" onAction="#removeSelectedJobs">
+					<graphic>
+						<de.jensd.fx.fontawesome.Icon  awesomeIcon="REMOVE" size="16px" />
+					</graphic>
+				</MenuItem>
+			</items>
+		</ContextMenu>
+	</fx:define>
 <BorderPane.margin>
 <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
 </BorderPane.margin>
@@ -57,7 +98,7 @@
 <bottom><FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" hgap="5.0" BorderPane.alignment="CENTER">
 <children>
 	<Button fx:id="abortAll" mnemonicParsing="false" text="Abort All" onAction="#abortAllJobs" />
-	<Button fx:id="openResults" mnemonicParsing="false" text="Open Results" onAction="#openResults" />
+	<Button fx:id="openResults" mnemonicParsing="false" text="Open Results" onAction="#openSelectedResults" />
 	<Button fx:id="clearFailedJobs" mnemonicParsing="false" text="Clear Failed Jobs" onAction="#clearFailedJobs" />
 	<Button fx:id="clearFinishedJobs" mnemonicParsing="false" text="Clear Finished Jobs" onAction="#clearFinishedJobs" />
 	<Button fx:id="openLogMessages" mnemonicParsing="false" text="Open Log Messages" onAction="#openLogMessages" />
