--- a/src/main/resources/fxml/AboutPane.fxml
+++ b/src/main/resources/fxml/AboutPane.fxml
@@ -7,17 +7,16 @@
 <?import javafx.scene.web.*?>
 
 <BorderPane prefHeight="493.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.levigo.jadice.server.converterclient.gui.about.AboutPaneController">
-
 <top>
 	<FlowPane styleClass="label-top">
 		<children>
 			<Button fx:id="home" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
-				prefHeight="30.0" prefWidth="30.0" styleClass="home" text="home">
+				prefHeight="30.0" prefWidth="30.0" styleClass="home" text="%home">
 				<FlowPane.margin>
 					<Insets right="10.0" />
 				</FlowPane.margin>
 			</Button>
-			<Label styleClass="label-top" text="About" />
+			<Label styleClass="label-top" text="%about.title" />
 		</children>
 		<padding>
 			<Insets left="10.0" top="5.0" />
@@ -27,24 +26,24 @@
 
 <center><TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
   <tabs>
-    <Tab text="About">
+    <Tab text="%about.about">
 <content><BorderPane prefHeight="200.0" prefWidth="200.0">
 <center><WebView fx:id="aboutWebView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
 </center></BorderPane>
 </content>
     </Tab>
-    <Tab text="License">
+    <Tab text="%about.license">
 <content><BorderPane prefHeight="200.0" prefWidth="200.0">
 <center><WebView fx:id="licenseWebView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
 </center></BorderPane>
 </content>
-    </Tab><Tab text="3rd Party Licenses">
+    </Tab><Tab text="%about.3rd-party-licenses">
 <content><BorderPane prefHeight="200.0" prefWidth="200.0">
 <center><WebView fx:id="thirdPartyWebView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
 </center></BorderPane>
 </content>
 </Tab>
-<Tab text="Log">
+<Tab text="%about.log">
 <content><BorderPane prefHeight="200.0" prefWidth="200.0">
 <center><TextArea fx:id="logView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" editable="false"/>
 </center></BorderPane>
