--- a/src/main/resources/fxml/ConversionPane.fxml
+++ b/src/main/resources/fxml/ConversionPane.fxml
@@ -10,10 +10,10 @@
 <top>
 <VBox>
 <children><FlowPane styleClass="label-top">
-<children><Button fx:id="home" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" styleClass="home" text="home">
+<children><Button fx:id="home" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" styleClass="home" text="%home">
 <FlowPane.margin>
 <Insets right="10.0" />
-</FlowPane.margin></Button><Label styleClass="label-top" text="Conversion" />
+</FlowPane.margin></Button><Label styleClass="label-top" text="%conversion.title" />
 </children>
 <VBox.margin>
 <Insets />
@@ -21,13 +21,13 @@
 <padding>
 <Insets left="10.0" top="5.0" />
 </padding></FlowPane><FlowPane alignment="CENTER_LEFT" hgap="5.0">
-<children><ComboBox fx:id="servers" editable="true" maxWidth="Infinity" prefHeight="31.0" prefWidth="230.0" promptText="Server URL" /><ComboBox fx:id="configurations" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="350.0" promptText="Workflow" />
+<children><ComboBox fx:id="servers" editable="true" maxWidth="Infinity" prefHeight="31.0" prefWidth="230.0" promptText="%conversion.server-url" /><ComboBox fx:id="configurations" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="350.0" promptText="%conversion.workflow" />
 <Button fx:id="applyLimits" onAction="#showApplyLimitsPopover">
     <tooltip>
-        <Tooltip text="Apply Job Limits" />
+        <Tooltip text="%conversion.apply-limits" />
     </tooltip>
 </Button>
-<Button fx:id="startConversion" defaultButton="true" mnemonicParsing="false" text="Start" onAction="#startConversion">
+<Button fx:id="startConversion" defaultButton="true" mnemonicParsing="false" text="%conversion.start" onAction="#startConversion">
 <FlowPane.margin>
 <Insets left="10.0" />
 </FlowPane.margin></Button>
@@ -39,47 +39,47 @@
 </top>
 <center><TableView fx:id="jobTable" prefWidth="200.0" BorderPane.alignment="CENTER">
   <columns>
-    <TableColumn fx:id="jobId" maxWidth="1000.0" prefWidth="120.0" text="Job ID" />
-    <TableColumn fx:id="jobFiles" maxWidth="1000.0" prefWidth="90.0" text="File(s)" />
-<TableColumn fx:id="jobWorkflow" editable="false" maxWidth="1000.0" prefWidth="85.0" text="Workflow" />
-<TableColumn fx:id="jobState" editable="false" maxWidth="90.0" prefWidth="65.0" resizable="false" text="State" />
-<TableColumn fx:id="jobWarnings" editable="false" maxWidth="35.0" prefWidth="30.0" resizable="false" text="W" />
-<TableColumn fx:id="jobErrors" editable="false" maxWidth="35.0" prefWidth="30.0" resizable="false" text="E" />
-<TableColumn fx:id="jobServerInstance" editable="false" maxWidth="1000.0" prefWidth="95.0" text="Server Instance" />
+    <TableColumn fx:id="jobId" maxWidth="1000.0" prefWidth="120.0" text="%conversion.table.job-id" />
+    <TableColumn fx:id="jobFiles" maxWidth="1000.0" prefWidth="90.0" text="%conversion.table.file" />
+<TableColumn fx:id="jobWorkflow" editable="false" maxWidth="1000.0" prefWidth="85.0" text="%conversion.table.workflow" />
+<TableColumn fx:id="jobState" editable="false" maxWidth="90.0" prefWidth="65.0" resizable="false" text="%conversion.table.state" />
+<TableColumn fx:id="jobWarnings" editable="false" maxWidth="35.0" prefWidth="30.0" resizable="false" text="%conversion.table.warnings-short" />
+<TableColumn fx:id="jobErrors" editable="false" maxWidth="35.0" prefWidth="30.0" resizable="false" text="%conversion.table.errors-short" />
+<TableColumn fx:id="jobServerInstance" editable="false" maxWidth="1000.0" prefWidth="95.0" text="%conversion.table.server-instance" />
   </columns>
 	<!-- Context Menu is only DEFINED, but not set as property here! -->
 	<fx:define>
 		<ContextMenu fx:id="tableContextMenu">
 			<items>
-				<MenuItem mnemonicParsing="false" text="Open Result" onAction="#openSelectedResults">
+				<MenuItem mnemonicParsing="false" text="%conversion.table.context.open-result" onAction="#openSelectedResults">
 					<graphic>
 						<de.jensd.fx.fontawesome.Icon  awesomeIcon="FOLDER_ALTPEN" size="16px" />
 					</graphic>
 				</MenuItem>
-				<MenuItem mnemonicParsing="false" text="Save Result" onAction="#saveSelectedResults">
+				<MenuItem mnemonicParsing="false" text="%conversion.table.context.save-result" onAction="#saveSelectedResults">
 					<graphic>
 						<de.jensd.fx.fontawesome.Icon  awesomeIcon="DOWNLOAD" size="16px" />
 					</graphic>
 				</MenuItem>
-				<MenuItem mnemonicParsing="false" text="Open Original File" onAction="#openSelectedOriginalFiles" />
-				<MenuItem mnemonicParsing="false" text="Show Log" onAction="#openLogMessages" />
+				<MenuItem mnemonicParsing="false" text="conversion.table.context.open-original" onAction="#openSelectedOriginalFiles" />
+				<MenuItem mnemonicParsing="false" text="conversion.table.context.show-log" onAction="#openLogMessages" />
 				<SeparatorMenuItem />
-				<MenuItem mnemonicParsing="false" text="Abort" onAction="#abortSelectedJobs">
+				<MenuItem mnemonicParsing="false" text="conversion.table.context.abort" onAction="#abortSelectedJobs">
 					<graphic>
 						<de.jensd.fx.fontawesome.Icon  awesomeIcon="BAN" size="16px" />
 					</graphic>
 				</MenuItem>
-				<MenuItem mnemonicParsing="false" text="Retry" onAction="#retrySelectedJobs">
+				<MenuItem mnemonicParsing="false" text="conversion.table.context.retry" onAction="#retrySelectedJobs">
 					<graphic>
 						<de.jensd.fx.fontawesome.Icon  awesomeIcon="REPEAT" size="16px" />
 					</graphic>
 				</MenuItem>
-				<MenuItem mnemonicParsing="false" text="Inspect Workflow" onAction="#inspectSelectedWorkflow">
+				<MenuItem mnemonicParsing="false" text="conversion.table.context.inspect-workflow" onAction="#inspectSelectedWorkflow">
 					<graphic>
 						<de.jensd.fx.fontawesome.Icon  awesomeIcon="SEARCH" size="16px" />
 					</graphic>
 				</MenuItem>
-				<MenuItem mnemonicParsing="false" text="Remove (Finished / Aborted only)" onAction="#removeSelectedJobs">
+				<MenuItem mnemonicParsing="false" text="conversion.table.context.remove" onAction="#removeSelectedJobs">
 					<graphic>
 						<de.jensd.fx.fontawesome.Icon  awesomeIcon="REMOVE" size="16px" />
 					</graphic>
@@ -97,11 +97,11 @@
 </center>
 <bottom><FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" hgap="5.0" BorderPane.alignment="CENTER">
 <children>
-	<Button fx:id="abortAll" mnemonicParsing="false" text="Abort All" onAction="#abortAllJobs" />
-	<Button fx:id="openResults" mnemonicParsing="false" text="Open Results" onAction="#openSelectedResults" />
-	<Button fx:id="clearFailedJobs" mnemonicParsing="false" text="Clear Failed Jobs" onAction="#clearFailedJobs" />
-	<Button fx:id="clearFinishedJobs" mnemonicParsing="false" text="Clear Finished Jobs" onAction="#clearFinishedJobs" />
-	<Button fx:id="openLogMessages" mnemonicParsing="false" text="Open Log Messages" onAction="#openLogMessages" />
+	<Button fx:id="abortAll" mnemonicParsing="false" text="%conversion.abort-all-jobs" onAction="#abortAllJobs" />
+	<Button fx:id="openResults" mnemonicParsing="false" text="%conversion.open-all-results" onAction="#openSelectedResults" />
+	<Button fx:id="clearFailedJobs" mnemonicParsing="false" text="%conversion.clear-all-failed-jobs" onAction="#clearFailedJobs" />
+	<Button fx:id="clearFinishedJobs" mnemonicParsing="false" text="%conversion.clear-all-finished-jobs" onAction="#clearFinishedJobs" />
+	<Button fx:id="openLogMessages" mnemonicParsing="false" text="%conversion.open-all-logs" onAction="#openLogMessages" />
 </children>
 <BorderPane.margin>
 <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
