--- a/src/main/resources/fxml/MetroMenuPane.fxml
+++ b/src/main/resources/fxml/MetroMenuPane.fxml
@@ -15,7 +15,11 @@
     <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" valignment="TOP" vgrow="NEVER" />
     <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" valignment="TOP" vgrow="NEVER" />
   </rowConstraints>
-<children><Button fx:id="conversion" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="Conversion" AnchorPane.leftAnchor="10.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" /><Button fx:id="serverLog" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="Server Log" AnchorPane.leftAnchor="280.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" /><Button fx:id="jmx" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="JMX" AnchorPane.leftAnchor="280.0" AnchorPane.topAnchor="270.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" /><Button fx:id="inspector" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="Inspector" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="270.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+<children>
+	<Button fx:id="conversion" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="%menu.conversion" AnchorPane.leftAnchor="10.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+	<Button fx:id="serverLog" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="%menu.server-log" AnchorPane.leftAnchor="280.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+	<Button fx:id="jmx" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="%menu.jmx" AnchorPane.leftAnchor="280.0" AnchorPane.topAnchor="270.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+	<Button fx:id="inspector" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" styleClass="button-navigation" text="%menu.inspector" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="270.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
 </children>
 <BorderPane.margin>
 <Insets left="45.0" />
@@ -24,7 +28,7 @@
 </center>
 <top><BorderPane BorderPane.alignment="CENTER">
 <left><FlowPane BorderPane.alignment="CENTER">
-<children><Label styleClass="label-top" text="jadice server :: Converter Client" BorderPane.alignment="CENTER">
+<children><Label styleClass="label-top" text="%menu.title" BorderPane.alignment="CENTER">
 <BorderPane.margin>
 <Insets left="10.0" />
 </BorderPane.margin></Label>
@@ -33,7 +37,7 @@
 <Insets bottom="5.0" left="10.0" top="5.0" />
 </padding></FlowPane>
 </left>
-<right><Button id="updateButton" fx:id="update" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="Update Available" visible="false" BorderPane.alignment="CENTER">
+<right><Button id="updateButton" fx:id="update" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="%menu.update-available" visible="false" BorderPane.alignment="CENTER">
 <FlowPane.margin>
 <Insets right="5.0" />
 </FlowPane.margin>
@@ -44,10 +48,10 @@
 </top>
 <bottom><FlowPane fx:id="bottomBar" alignment="CENTER" columnHalignment="CENTER" hgap="30.0" prefHeight="50.0" prefWidth="200.0" styleClass="bg-black" BorderPane.alignment="CENTER">
 <children>
-	<Button fx:id="fullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Fullscreen" />
-	<Button fx:id="exitFullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Exit Fullscreen" />
-	<Button fx:id="options" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="Options" />
-	<Button fx:id="about" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="About" />
+	<Button fx:id="fullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="%menu.enter-fullscreen" />
+	<Button fx:id="exitFullscreen" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="%menu.exit-fullscreen" />
+	<Button fx:id="options" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="%menu.options" />
+	<Button fx:id="about" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="button-navigation-small" text="%menu.about" />
 </children>
 <padding>
 <Insets bottom="10.0" top="10.0" />
