--- a/src/main/resources/fxml/LogPane.fxml
+++ b/src/main/resources/fxml/LogPane.fxml
@@ -9,7 +9,7 @@
 <top>
 <VBox>
 <children><FlowPane styleClass="label-top">
-<children><Button fx:id="home" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" styleClass="home" text="%home">
+<children><Button fx:id="home" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" styleClass="home" text="%app.home">
 <FlowPane.margin>
 <Insets right="10.0" />
 </FlowPane.margin></Button><Label styleClass="label-top" text="%server-log.title" />
